--- a/config.properties
+++ b/config.properties
@@ -1,4 +1,4 @@
-GIT_BRANCH=main
-GIT_URL=https://github.com/tuanle-data/cpp-practices.git
+GIT_BRANCH="main"
+GIT_URL="https://github.com/tuanle-data/cpp-practices.git"
 DOCKER_IMAGE_NAME=biarray-v1
 DOCKER_IMAGE_TAG=latest
